Styling section and articles

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 	background-size: cover;
 }
 
-div{
+#main{
 	width: 90%;
 	height: 1200px;
 	margin: 0 auto;
@@ -27,5 +27,22 @@ p{
 }
 
 img{
+	width: 100%;
+	max-width: 100%;
+}
+
+.article1{
+
+}
+
+.article2{
+
+}
+
+.article3{
+
+}
+
+section{
 
 }
