--- a/style.css
+++ b/style.css
@@ -38,20 +38,11 @@ img{
 
 }
 
-.article1{
+.article{
 	width: 33%;
 	display: inline-block;
 }
 
-.article2{
-	width: 33%;
-	display: inline-block;
-}
-
-.article3{
-	width: 33%;
-	display: inline-block;
-}
 
 section{
 
