--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif; /*Google Fonts*/
+	font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -25,7 +25,7 @@ h1{
 }
 
 h2{
-	
+
 }
 
 p{
