--- a/style.css
+++ b/style.css
@@ -15,22 +15,22 @@ body{
 	height: 100%;
 	margin: 0 auto;
 	padding: 12px;
-	background: rgba(245,215,80,.3); /*Red, Green, Blue, Alpha*/
+	background: rgba(217,150,91,.3); /*Red, Green, Blue, Alpha*/
 }
 
 h1{
-	color: #3743FF; /*Hex color, Adobe Color*/
+	color: #3E608C; /*Hex color, Adobe Color*/
 	text-transform: uppercase;
 	font-size: 64px;
 }
 
 h2{
-	color: #3743FF;
+	color: #91B7D9;
 	font-size: 24px;
 }
 
 p{
-	color: #3743FF;
+	color: #3E608C;
 	font-size: 16px;
 }
 
